# 2022_02Sample

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: camera.launch  demo.launch
scripts/: scene_rekognition.py  webserver.py
scripts/static/: main.js  style.css
scripts/templates/: index.html
srv/: SceneRekognition.srv
